add read streams

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "append-only-tree.js",
   "dependencies": {
     "protocol-buffers-encodings": "^1.1.0",
+    "streamx": "^2.6.6",
     "tree-to-string": "^1.1.1"
   },
   "devDependencies": {},
