Assorted additions and fixes

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "codecs": "^2.1.0",
     "protocol-buffers-encodings": "^1.1.0",
     "streamx": "^2.6.6",
     "tree-to-string": "^1.1.1"
