--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "dependencies": {
     "codecs": "^2.1.0",
     "protocol-buffers-encodings": "^1.1.0",
-    "streamx": "^2.6.6",
-    "tree-to-string": "^1.1.1"
+    "streamx": "^2.6.6"
   },
   "devDependencies": {
     "hypercore": "^9.5.0",
     "protocol-buffers": "^4.2.0",
     "random-access-memory": "^3.1.1",
-    "tape": "^5.0.1"
+    "tape": "^5.0.1",
+    "tree-to-string": "^1.1.1"
   },
   "scripts": {
     "test": "tape test/*.js",
