--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x]
-        os: [ubuntu-16.04]
+        os: [ubuntu-16.04, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
