--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "codecs": "^2.1.0",
+    "hypercore-promisifier": "^1.0.1",
     "mutexify": "^1.3.1",
     "protocol-buffers-encodings": "^1.1.0",
     "streamx": "^2.6.6"
