--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "streamx": "^2.6.6"
   },
   "devDependencies": {
-    "hypercore": "github:hypercore-protocol/hypercore-next",
+    "hypercore": "next",
     "protocol-buffers": "^4.2.0",
     "random-access-memory": "^3.1.1",
     "standard": "^14.3.4",
