--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "main": "index.js",
   "dependencies": {
     "b4a": "^1.5.3",
-    "codecs": "^2.1.0",
+    "codecs": "^3.0.0",
     "hypercore-promisifier": "^1.0.1",
     "mutexify": "^1.3.1",
     "protocol-buffers-encodings": "^1.1.0",
     "streamx": "^2.6.6"
   },
   "devDependencies": {
-    "hypercore": "^9.5.0",
+    "brittle": "^3.0.4",
+    "hypercore": "^10.0.0",
     "protocol-buffers": "^4.2.0",
     "random-access-memory": "^3.1.1",
-    "standard": "^14.3.4",
-    "tape": "^5.0.1",
+    "standard": "^17.0.0",
     "tree-to-string": "^1.1.1"
   },
   "scripts": {
-    "test": "standard && tape test/*.js",
+    "test": "standard && brittle test/*.js",
     "protobuf": "protocol-buffers schema.proto -o ./lib/messages.js"
   },
   "repository": {
