--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "files": [
     "index.js",
-    "lib/**.js"
+    "lib/**.js",
+    "iterators/**.js"
   ],
   "dependencies": {
     "b4a": "^1.6.0",
