--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "b4a": "^1.6.0",
     "codecs": "^3.0.0",
+    "debounceify": "^1.0.0",
     "mutexify": "^1.4.0",
     "protocol-buffers-encodings": "^1.2.0",
     "safety-catch": "^1.0.2",
