--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "streamx": "^2.12.4"
   },
   "devDependencies": {
+    "@hyperswarm/testnet": "^3.1.1",
     "brittle": "^3.1.0",
     "hypercore": "^10.0.0",
+    "hyperswarm": "^4.4.0",
     "protocol-buffers": "^4.2.0",
     "random-access-memory": "^6.0.0",
     "standard": "^17.0.0",
