--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mutexify": "^1.4.0",
     "protocol-buffers-encodings": "^1.2.0",
     "safety-catch": "^1.0.2",
+    "same-data": "^1.0.0",
     "streamx": "^2.12.4"
   },
   "devDependencies": {
