--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "codecs": "^3.0.0",
     "mutexify": "^1.4.0",
     "protocol-buffers-encodings": "^1.2.0",
+    "ready-resource": "^1.0.0",
     "safety-catch": "^1.0.2",
     "streamx": "^2.12.4"
   },
