--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "protocol-buffers": "^4.2.0",
     "random-access-memory": "^6.0.0",
     "standard": "^17.0.0",
+    "sub-encoder": "^1.0.6",
     "tree-to-string": "^1.1.1"
   },
   "scripts": {
