--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "brittle": "^3.1.0",
     "hypercore": "^10.0.0",
+    "hyperdht": "^6.6.1",
+    "hyperswarm": "^4.5.1",
     "protocol-buffers": "^4.2.0",
     "random-access-memory": "^6.0.0",
     "standard": "^17.0.0",
