--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debounceify": "^1.0.0",
     "mutexify": "^1.4.0",
     "protocol-buffers-encodings": "^1.2.0",
+    "queue-tick": "^1.0.1",
     "ready-resource": "^1.0.0",
     "safety-catch": "^1.0.2",
     "streamx": "^2.12.4"
