--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "b4a": "^1.6.0",
     "codecs": "^3.0.0",
     "debounceify": "^1.0.0",
-    "hypercore": "^10.18.0",
+    "hypercore-errors": "^1.0.0",
     "mutexify": "^1.4.0",
     "protocol-buffers-encodings": "^1.2.0",
     "ready-resource": "^1.0.0",
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "brittle": "^3.1.0",
+    "hypercore": "^10.18.0",
     "protocol-buffers": "^4.2.0",
     "random-access-memory": "^6.0.0",
     "standard": "^17.0.0",
