--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "protocol-buffers-encodings": "^1.2.0",
     "ready-resource": "^1.0.0",
     "safety-catch": "^1.0.2",
-    "streamx": "^2.12.4"
+    "streamx": "^2.12.4",
+    "xache": "^1.2.1"
   },
   "devDependencies": {
     "brittle": "^3.1.0",
