--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "protocol-buffers-encodings": "^1.2.0",
     "ready-resource": "^1.0.0",
     "safety-catch": "^1.0.2",
+    "signal-promise": "^1.0.3",
     "streamx": "^2.12.4",
     "xache": "^1.2.1"
   },
