--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ready-resource": "^1.0.0",
     "safety-catch": "^1.0.2",
     "streamx": "^2.12.4",
+    "unslab": "^1.2.0",
     "xache": "^1.2.1"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "random-access-memory": "^6.0.0",
     "standard": "^17.0.0",
     "sub-encoder": "^1.0.6",
+    "test-tmp": "^1.2.1",
     "tree-to-string": "^1.1.1"
   },
   "scripts": {
