--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "hypercore-errors": "^1.0.0",
     "mutexify": "^1.4.0",
     "protocol-buffers-encodings": "^1.2.0",
+    "rache": "^0.0.3",
     "ready-resource": "^1.0.0",
     "safety-catch": "^1.0.2",
     "streamx": "^2.12.4",
-    "unslab": "^1.2.0",
-    "xache": "^1.2.1"
+    "unslab": "^1.2.0"
   },
   "devDependencies": {
     "brittle": "^3.1.0",
