Fix logic + add tests

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "hypercore-errors": "^1.0.0",
     "mutexify": "^1.4.0",
     "protocol-buffers-encodings": "^1.2.0",
-    "rache": "^0.0.3",
+    "rache": "^1.0.0",
     "ready-resource": "^1.0.0",
     "safety-catch": "^1.0.2",
     "streamx": "^2.12.4",
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "brittle": "^3.1.0",
-    "hypercore": "^10.18.0",
+    "hypercore": "holepunchto/hypercore#rache-global-approach",
     "protocol-buffers": "^4.2.0",
     "random-access-memory": "^6.0.0",
     "standard": "^17.0.0",
