Use published hypercore

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "brittle": "^3.1.0",
-    "hypercore": "holepunchto/hypercore#rache-global-approach",
+    "hypercore": "^10.37.10",
     "protocol-buffers": "^4.2.0",
     "random-access-memory": "^6.0.0",
     "standard": "^17.0.0",
