--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "protocol-buffers-encodings": "^1.2.0",
     "rache": "^1.0.0",
     "ready-resource": "^1.0.0",
+    "resolve-reject-promise": "^1.1.0",
     "safety-catch": "^1.0.2",
     "streamx": "^2.12.4",
     "unslab": "^1.2.0"
